<resources>
    <string name="app_name">My bOOst</string>
    <string name="sign_in">SIGN IN</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="identifier">Identifier</string>
    <string name="log_in">LOG IN</string>
    <string name="loginPage">Login Page</string>
    <string name="errorname">Name is required!</string>
    <string name="errorpassword">Password is required!</string>
    <string name="erroremil">E-mail is Required!</string>
    <string name="errormailvalid">A valid E-mail is Required!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="sign_up">SIGN UP</string>
    <string name="CIN">CIN</string>
    <string name="teambuilt_name">Building My Project Team</string>
    <string name="save">SAVE</string>
    <string name="project_name">Project Name</string>
    <string name="email_user1">"E_mail ( Student1 ) "</string>
    <string name="email_user2">"E_mail ( Student2 ) "</string>
    <string name="email_user3">"E_mail ( Student3 ) "</string>
    <string name="email_user4">"E_mail ( Student4 ) "</string>
    <string name="email_user5">"E_mail ( Student5 ) "</string>
    <string name="email_user10">"E_mail ( Supervisor1 ) "</string>
    <string name="email_user20">"E_mail ( Supervisor2 ) "</string>
    <string name="project">Project</string>
    <string name="projectbuilt_name">Building My Project</string>
    <string name="mail_user">My E-mail</string>
    <string name="link_git">Git Link</string>
    <string name="my_full_name">My Full Name</string>
    <string name="comment">You can add a comment here</string>
    <string name="copylink">Copy the git link</string>
    <string name="class_collegue">"Class (Exemple : 4 SIM 2 ) "</string>
    <string name="project_year">University Year (Exemple : 20222023)</string>
    <string name="Tasks_to_do">TASKS TO DO </string>
    <string name="task_title">Task title</string>
    <string name="set_date">Set Date</string>
    <string name="erroremail">E-mail is required!</string>
    <string name="add_project_group">+ ADD Project Group</string>
    <string name="here_are_my_project_groups">Here are My Project Groups</string>
    <string name="add_assignement">+ add Assignment</string>
    <string name="here_are_my_assignements_for_the_clicked_project">Here are my Assignements for the clicked Project</string>
    <string name="assignement_name">Assignment Name</string>
    <string name="choose_another_project">Choose another Project</string>
    <string name="Description_assignment">Description Of the Assignment: More details</string>
    <string name="my_new_name">My new Name</string>
    <string name="confirm_my_e_mail">Confirm my e-mail</string>
    <string name="my_new_password">My new Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_name">Edit Name</string>
    <string name="description_text_here">Description Text Here</string>
    <string name="year">Year</string>
    <string name="emails">Emails</string>
    <string name="calssroom">Calssroom</string>
    <string name="group_name">Project Group Name</string>
    <string name="welcome">welcome</string>
    <string name="add_group_project">Add Group Project</string>
    <string name="go_sign_up">If you don\'t have an account yet \n please sign up first:</string>
    <string name="checkYourEmail">A correct e_mail is required!</string>
    <string name="mustBeAtLeast5">5 characters at least</string>
    <string name="mustBeAtLeast3">3 characters at leas</string>
    <string name="extended_fab_content_desc">extended_fab_content_desc</string>
    <string name="add_task">ADD TASK</string>
    <string name="set_Deadline">set Deadline</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="available_chat_rooms">Available Chat Rooms</string>
    <string name="chat_room">Chat Room</string>
    <string name="select_either_prompt">"Task affected to "</string>
    <string name="task_affected_to">"Task affected to "</string>
    <string name="edit">Edit</string>
    <string name="tab_layout_content_description">tab_layout_content_description</string>
    <string name="access_calendar">Calendar</string>


</resources>