<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/profile"/>
<!--
    <item
        android:id="@+id/project"
        android:enabled="true"
        android:icon="@drawable/ic_construction"
        android:title="@string/project"/>
-->
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>