<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/background_border2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtGrouptName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/group_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />
                <!--
                <TextView
                    android:id="@+id/today"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:text="today"
                    android:textColor="@color/colorPrimaryDark" />
                    -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtCalssroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/calssroom"
                    android:textColor="@color/colorbutton"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtEmails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/emails"
                    android:textColor="@color/blue"
                    android:layout_gravity="end"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/year"
                android:textColor="@color/colorbutton"
                android:textStyle="bold" />

        </LinearLayout>
    <!--
    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_gravity="start|bottom"
        android:src="@drawable/ic_delete3*77"/>
-->
</androidx.cardview.widget.CardView>